Started stack notes

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /NetBeansProjects/ADPAF/LinkedListTypesExercise/build/
 /NetBeansProjects/ADPAF/InClassActivity1/nbproject/private/
 /NetBeansProjects/ADPAF/InClassActivity1/build/
+/NetBeansProjects/ADPAF/InClassStack/nbproject/private/
+/NetBeansProjects/ADPAF/InClassStack/build/
