added more priorityqueue code

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /NetBeansProjects/ADPAF/InClassStackLinkedList/build/
 /NetBeansProjects/ADPAF/InClassQueues/nbproject/private/
 /NetBeansProjects/ADPAF/InClassQueues/build/
+/NetBeansProjects/ADPAF/ArrayQueues/nbproject/private/
