--- a/NetBeansProjects/ADPAF/InClassListExercise/nbproject/private/private.properties
+++ b/NetBeansProjects/ADPAF/InClassListExercise/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\s540549\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\Wyatt Morgan\\AppData\\Roaming\\NetBeans\\18\\build.properties
