--- a/NetBeansProjects/ADPAF/ArrayQueues/nbproject/project.properties
+++ b/NetBeansProjects/ADPAF/ArrayQueues/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ArrayQueues.jar
+dist.jar=${dist.dir}/InClassArrayQueues.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ArrayQueues
+dist.jlink.output=${dist.jlink.dir}/InClassArrayQueues
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ArrayQueues
+jlink.launcher.name=InClassArrayQueues
 main.class=arrayqueues.ArrayQueues
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
