changed some formatting

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /NetBeansProjects/ADPAF/ArrayQueues/build/
 /NetBeansProjects/ADPAF/InClassDeque/nbproject/private/
 /NetBeansProjects/ADPAF/InClassDeque/build/
+/NetBeansProjects/ADPAF/InClassSets/build/
