--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /NetBeansProjects/ADPAF/InClassDeque/nbproject/private/
 /NetBeansProjects/ADPAF/InClassDeque/build/
 /NetBeansProjects/ADPAF/InClassSets/build/
+/NetBeansProjects/ADPAF/hashsets/nbproject/private/
+/NetBeansProjects/ADPAF/InClassHashMaps/nbproject/private/
