finished code up to inclassactivity

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /NetBeansProjects/ADPAF/InClassSets/build/
 /NetBeansProjects/ADPAF/hashsets/nbproject/private/
 /NetBeansProjects/ADPAF/InClassHashMaps/nbproject/private/
+/NetBeansProjects/ADPAF/InClassHashMaps/build/
