created inClassTrees2 project

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /NetBeansProjects/ADPAF/InClassActivityHashing/build/
 /NetBeansProjects/ADPAF/InClassTrees/nbproject/private/
 /NetBeansProjects/ADPAF/InClassTrees/build/
+/NetBeansProjects/ADPAF/InClassTrees2/nbproject/private/
+/NetBeansProjects/ADPAF/InClassTrees2/build/
