--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 /NetBeansProjects/ADPAF/InClassTrees/build/
 /NetBeansProjects/ADPAF/InClassTrees2/nbproject/private/
 /NetBeansProjects/ADPAF/InClassTrees2/build/
+/NetBeansProjects/ADPAF/InClassThreads/nbproject/private/
+/NetBeansProjects/ADPAF/InClassThreads/build/
