created in class regex project

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 /NetBeansProjects/ADPAF/InClassTrees2/build/
 /NetBeansProjects/ADPAF/InClassThreads/nbproject/private/
 /NetBeansProjects/ADPAF/InClassThreads/build/
+/NetBeansProjects/ADPAF/InClassRegex/nbproject/private/
+/NetBeansProjects/ADPAF/InClassRegex/build/
